--- a/sample/20-cache/package.json
+++ b/sample/20-cache/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "8.0.11",
     "@nestjs/core": "8.0.11",
     "@nestjs/platform-express": "8.0.11",
+    "cache-manager": "3.4.4",
     "cache-manager-redis-store": "2.0.0",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
